// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThemeToggleButton > использует системную тему dark при первом открытии 1`] = `
<div>
  <button
    class="cursor-pointer w-fit h-fit font-semibold text-primary hover:bg-primary/15 disabled:opacity-50 disabled:cursor-not-allowed text-base rounded-md p-1"
    title="Light mode"
    type="button"
  >
    <div
      style="position: relative; width: 24px; height: 24px;"
    >
      <div
        data-testid="moon-icon"
        style="position: absolute; inset: 0; opacity: 1; transform: none;"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-moon text-blue-800"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`ThemeToggleButton > отрендеривается с начальной темой light 1`] = `
<div>
  <button
    class="cursor-pointer w-fit h-fit font-semibold text-primary hover:bg-primary/15 disabled:opacity-50 disabled:cursor-not-allowed text-base rounded-md p-1"
    title="Dark mode"
    type="button"
  >
    <div
      style="position: relative; width: 24px; height: 24px;"
    >
      <div
        data-testid="sun-icon"
        style="position: absolute; inset: 0; opacity: 1; transform: none;"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sun text-yellow-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="4"
          />
          <path
            d="M12 2v2"
          />
          <path
            d="M12 20v2"
          />
          <path
            d="m4.93 4.93 1.41 1.41"
          />
          <path
            d="m17.66 17.66 1.41 1.41"
          />
          <path
            d="M2 12h2"
          />
          <path
            d="M20 12h2"
          />
          <path
            d="m6.34 17.66-1.41 1.41"
          />
          <path
            d="m19.07 4.93-1.41 1.41"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;
